--- a/wp-content/themes/voiceofoc/less/navbar-voc.less
+++ b/wp-content/themes/voiceofoc/less/navbar-voc.less
@@ -109,3 +109,9 @@ nav.navbar div.navbar-inner {
     font-family: @serifFontFamily;
   }
 }
+
+@media (max-width: 510px) {
+  #header-extras li.donate {
+    display: none;
+  }
+}
